# src/patients/infra/models/patientsModel.ts
@@ -2,20 +2,20 @@ import PrismaConnection from '@prisma/prismaConnection'
 import Patient from '@patients/domain/entities/patient'
 import { InternalServerError } from '@apiErrors/errors'
 
-export default class RolesModel {
+export default class PatientModel {
   private PrismaConnection = PrismaConnection
-
-  async createPatient(patient: Patient) {
+  async createPatient(patient: Patient): Promise<number | undefined> {
+    let data
     try {
-      const data = await this.PrismaConnection.$transaction([
+      data = await this.PrismaConnection.$transaction([
         this.PrismaConnection.people.create({
           data: {
             name: patient.name,
-            maritalStatus: patient.maritalStatus,
             birthDate: patient.birthDate,
             rg: patient.rg,
             cpf: patient.cpf,
             gender: patient.gender,
+            maritalStatus: patient.maritalStatus,
             address: {
               create: {
                 street: patient.address.street,
@@ -27,15 +27,9 @@ export default class RolesModel {
               },
             },
             telephone: {
-              create: {
-                telephoneNumber: patient.telephone.telephoneNumber,
-              },
+              create: { telephoneNumber: patient.telephone.telephoneNumber },
             },
-            patient: {
-              create: {
-                status: patient.status,
-              },
-            },
+            patient: { create: { status: patient?.status ?? 'Ativo' } },
           },
         }),
       ])
@@ -51,38 +45,92 @@ export default class RolesModel {
 
       return patientRecorded?.id
     } catch (error) {
+      console.log(error)
       throw new InternalServerError('Erro ao criar um paciente')
     }
   }
 
-  async deletePatient(patientId: number) {
+  async statusPatient(patientId: number) {
+    let patient
     try {
-      return await this.PrismaConnection.patient.updateMany({
+      patient = await this.PrismaConnection.patient.findUnique({
         where: {
           id: patientId,
-          status: 'ativo',
         },
-        data: {
-          status: 'inativo',
+        select: {
+          id: true,
+          status: true,
         },
       })
+
+      return await this.PrismaConnection.$transaction([
+        this.PrismaConnection.patient.update({
+          where: {
+            id: patient?.id,
+          },
+          data: {
+            status: patient?.status === 'Ativo' ? 'Inativo' : 'Ativo',
+          },
+        }),
+      ])
     } catch (error) {
-      throw new InternalServerError('Erro ao deletar um paciente.')
+      throw new InternalServerError(
+        `Erro ao ${
+          patient?.status === 'Ativo' ? 'inativar' : 'ativar'
+        } o funcionário`,
+      )
     }
   }
 
-  /* async updatePatient(patient: Patient) {
+  async updatePatient(patient: Patient) {
     try {
-      return await this.prismaConnection.role.update({
-        where: {
-          id: role.id,
-        },
-        data: {
-          name: role.name,
-        },
-      });
+      return await this.PrismaConnection.$transaction([
+        this.PrismaConnection.patient.update({
+          where: {
+            id: patient.id,
+          },
+          data: {
+            people: {
+              update: {
+                name: patient.name,
+                birthDate: patient.birthDate,
+                rg: patient.rg,
+                cpf: patient.cpf,
+                gender: patient.gender,
+                maritalStatus: patient.maritalStatus,
+                address: {
+                  update: {
+                    where: {
+                      id: patient.address.id,
+                    },
+                    data: {
+                      street: patient.address.street,
+                      number: patient.address.number,
+                      district: patient.address.district,
+                      city: patient.address.city,
+                      postalCode: patient.address.postalCode,
+                      state: patient.address.state,
+                    },
+                  },
+                },
+                telephone: {
+                  update: {
+                    where: {
+                      id: patient.telephone.id,
+                    },
+                    data: {
+                      telephoneNumber: patient.telephone.telephoneNumber,
+                    },
+                  },
+                },
+              },
+            },
+          },
+        }),
+      ])
     } catch (error) {
-      throw new InternalServerError('Erro ao atualizar um paciente.');
+      console.log(error)
+      throw new InternalServerError('Erro ao atualizar um funcionário')
     }
-  } */
+  }
 }
