# swagger.json
@@ -303,7 +303,7 @@
         },
         "responses": {
           "201": {
-            "description": "Id do cargo criado"
+            "description": "Id do funcionário criado"
           },
           "400": {
             "description": "Conteúdo inválido"
@@ -465,7 +465,249 @@
           }
         }
       }
-    }
+    },
 
+
+    "/patients": {
+      "get": {
+        "security": [
+          {
+            "BearerAuth": [
+              "BearerAuth"
+            ]
+          }
+        ],
+        "tags": [
+          "Paciente"
+        ],
+        "summary": "Buscar todos os pacientes",
+        "responses": {
+          "200": {
+            "description": "Array de objeto dos pacientes"
+          },
+          "401": {
+            "description": "Acesso negado"
+          },
+          "500": {
+            "description": "Erro do servidor"
+          }
+        }
+      },
+
+      "post": {
+        "summary": "Criar um novo paciente",
+        "tags": ["Paciente"],
+        "security": [
+          {"BearerAuth" :  ["BearerAuth"]}
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "example": "Maria Silva"
+                  },
+
+                  "birthDate": {
+                    "type": "string",
+                    "example": "2002-12-31"
+                  },
+
+
+                  "rg": {
+                    "type": "string",
+                    "example": "123456890"
+                  },
+
+                  "cpf": {
+                    "type": "string",
+                    "example": "123.456.789-10"
+                  },
+
+                  "maritalStatus": {
+                    "type": "string",
+                    "example": "Solteiro (a)"
+                  },
+
+                  "gender": {
+                    "type": "string",
+                    "example": "Masculino"
+                  },
+
+                  "address": {
+                    "type": "object",
+                    "example":  {
+                      "street": "Rua Floresta",
+                      "number": "50",
+                      "district": "Jardim Panorama",
+                      "city": "Altônia",
+                      "postalCode": "87550-000",
+                      "state": "PR"
+                    }
+                  },
+
+                  "telephone": {
+                    "type": "object",
+                    "example":  {
+                      "telephoneNumber": "(44) 99873-9002"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Id do paciente criado"
+          },
+          "400": {
+            "description": "Conteúdo inválido"
+          },
+          "401": {
+            "description": "Acesso negado"
+          },
+          "500": {
+            "description": "Erro do servidor"
+          }
+        }
+      }
+  },
+
+    "/patients/{id}": {
+      "parameters": [
+        {
+          "in": "path",
+          "name": "id",
+          "description": "Buscar pelo id"
+        }
+      ],
+      "get": {
+        "security": [
+          {"BearerAuth" :  ["BearerAuth"]}
+        ],
+        "tags": ["Paciente"],
+        "summary": "Buscar paciente pelo id",
+        "responses": {
+          "200": {
+            "description": "Um objeto do paciente"
+          },
+          "401": {
+            "description": "Acesso negado"
+          },
+          "500": {
+            "description": "Erro do servidor"
+          }
+        }
+      },
+      "patch": {
+        "security": [
+          {"BearerAuth" :  ["BearerAuth"]}
+        ],
+        "tags": ["Paciente"],
+        "summary": "Alterar o status paciente pelo id",
+        "responses": {
+          "204": {
+            "description": "Sem conteúdo"
+          },
+          "400": {
+            "description": "Conteúdo inválido"
+          },
+          "401": {
+            "description": "Acesso negado"
+          },
+          "500": {
+            "description": "Erro do servidor"
+          }
+        }
+      },
+
+      "put": {
+        "summary": "Atualizar um paciente",
+        "tags": ["Paciente"],
+        "security": [
+          {"BearerAuth" :  ["BearerAuth"]}
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "example": "Maria Silva"
+                  },
+
+                  "birthDate": {
+                    "type": "string",
+                    "example": "2002-12-31"
+                  },
+
+
+                  "rg": {
+                    "type": "string",
+                    "example": "123456890"
+                  },
+
+                  "cpf": {
+                    "type": "string",
+                    "example": "123.456.789-10"
+                  },
+
+                  "maritalStatus": {
+                    "type": "string",
+                    "example": "Solteiro (a)"
+                  },
+
+                  "gender": {
+                    "type": "string",
+                    "example": "Masculino"
+                  },
+
+                  "address": {
+                    "type": "object",
+                    "example":  {
+                      "street": "Rua Floresta",
+                      "number": "50",
+                      "district": "Jardim Panorama",
+                      "city": "Altônia",
+                      "postalCode": "87550-000",
+                      "state": "PR"
+                    }
+                  },
+
+                  "telephone": {
+                    "type": "object",
+                    "example":  {
+                      "telephoneNumber": "(44) 99873-9002"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "Sem conteúdo"
+          },
+          "400": {
+            "description": "Conteúdo inválido"
+          },
+          "401": {
+            "description": "Acesso negado"
+          },
+          "500": {
+            "description": "Erro do servidor"
+          }
+        }
+      }
+    }
   }
 }
